# kornia-rs

examples/bubbaloop-edge-vision/: Cargo.toml  README.md
examples/bubbaloop-edge-vision/configs/: proposal.example.toml
examples/bubbaloop-edge-vision/docs/: ARCHITECTURE.md  BUBBALOOP_INTEGRATION.md
examples/bubbaloop-edge-vision/src/: bubbaloop.rs  config.rs  lib.rs
examples/bubbaloop-edge-vision/src/pipelines/: birdseye.rs  mod.rs  panorama.rs  surround.rs
